# idm

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  demo.tape  flake.nix
docs/: handlers.md  protocol-research.md  protocol.md
idm-macros/: Cargo.toml
idm-macros/src/: diagnostics_section.rs  has_diagnostics.rs  lib.rs  progress.rs
nix/: base.nix  checks.nix  devshell.nix  packages.nix  treefmt.nix
src/: app.rs  error.rs  lib.rs  main.rs  notification.rs  protocol.rs  telemetry.rs  terminal.rs  utils.rs
src/cli/: command.rs  control.rs  image.rs  inspect.rs  listen.rs  mod.rs
src/cli/ui/: device_view.rs  (+6 more)
src/diy/: mod.rs  session.rs  upload_runtime.rs
src/handlers/: brightness.rs  frame_codec.rs  fullscreen_colour.rs  gif_upload.rs  image_upload.rs  mod.rs  power.rs  screen_light_timeout.rs  text_upload.rs  time_sync.rs  transport_chunk_sizer.rs  upload_common.rs
src/hw/: btleplug_backend.rs  device_profile_resolver.rs  diagnostic_value.rs  diagnostics.rs  fake_backend.rs  hardware.rs  mod.rs  model.rs  model_overrides.rs  model_resolution_diagnostics.rs  profile.rs  scan_capabilities.rs  scan_model.rs  session.rs
src/media/: gif_animation.rs  image_preprocessor.rs  mod.rs  rgb888_frame.rs
tests/: commands_cli.rs  control_handlers.rs  scan_model_handler.rs  session_handler.rs
tests/snapshots/: commands_cli__control_brightness_command_stdout.snap  commands_cli__control_colour_command_stdout.snap  commands_cli__control_power_command_stdout.snap  commands_cli__control_sync_time_command_stdout.snap  commands_cli__control_text_command_stdout.snap  (+3 more)
(+17 files in other folders)
